# django-cineclub

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Pipfile  README  README.md  README.rst  admin.py  ajax.py  forms.py  manage.py  middleware.py  models.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  todo  update.py  urls.py  views.py  wsgi.py
app/: admin.py  models.py  views.py
cine/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
cine/migrations/: 0001_initial.py  0002_auto_20150109_2007.py  0003_auto_20150112_0554.py  0004_adress.py  0005_auto_20150514_1638.py  0006_no_categories.py  0007_veto.py  0008_unique_together.py  0009_adresses.py  0010_create_group.py  0011_remove_film_duree.py  0012_rename_duree_min_to_duree.py  0013_film_ordering.py  0014_cinephile.py  0015_change_m2m_models.py  0016_rm_old_models.py  0017_cinephile_blank_fields.py  0018_cinephile_ordering.py  0019_cinephile_ordering.py  0020_cinephiles_inactifs.py  0021_cinephile_ordering.py  0022_remove_film_imdb.py  0023_auto_20170709_1509.py  0024_clean.py  0024_clean_2.py  0025_auto_20171206_0043.py  0026_auto_20171206_0047.py  0027_auto_20171206_0047.py  0028_auto_20180128_1914.py  0029_auto_20180128_1915.py
cine/templatetags/: cine_extra.py
cineclub/: apps.py
cineclub/migrations/: 0003_auto_20150112_0554.py  0005_auto_20150514_1638.py
management/commands/: create_missing_v_d.py  qui_a_pas_vote.py  update.py  update_favoris.py
migrations/: 0001_initial.py  0002_auto_20150109_2007.py  0003_auto_20150112_0554.py  0004_adress.py  0005_auto_20150514_1638.py  0006_no_categories.py  0007_veto.py  0008_unique_together.py
mycineclub/: settings.py  urls.py
mycineclub/templates/: base.html
mycineclub_example/: cine
public/: django.fcgi
templates/: about.html  cinephiles.html  comms.html  dates.html  dispos.html  films.html  home.html  login.html  main.html  profil.html  votes.html
templatetags/: cine_extra.py
(+45 files in other folders)
