[tool.poetry]
name = "cineclub"
version = "2.2.2"
description = "gestion d’un cinéclub"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6.2"
django-sortedm2m = "^3.0.2"
icalendar = "^4.0.7"
pytz = "^2021.1"
requests = "^2.25.1"
ndh = "^3.10.4"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
python-coveralls = "^2.9.3"
safety = "^1.10.3"
mypy = "^0.812"
django-stubs = "^1.7.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.11.1"
setuptools-scm = "^6.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
