[tool.poetry]
name = "cineclub"
version = "2.2.2"
description = "gestion d’un cinéclub"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
django-sortedm2m = "^4.0.0"
icalendar = "^6.1.0"
pytz = "^2024.2"
requests = "^2.32.4"
ndh = "^6.9.2"
Pillow = "^12.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
python-coveralls = "^2.9.3"
safety = "^3.2.14"
mypy = "^1.14.1"
django-stubs = "^5.1.2"
pydocstyle = "^6.3.0"
pre-commit = "^4.0.1"
setuptools-scm = "^8.1.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
